--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@branu-jp/v-drag": "^0.1.0",
     "axios": "^0.26.0",
     "vue": "^3.2.25"
   },
